# supsim-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: deploy.yml  test.yml
docs/: api-conventions.md  architecture.md  query-builder.md  structure.md  tech.md
functions/health/: app.py
lambdas/analytics/: app.py
lambdas/health/: app.py
layers/supsim/: requirements.txt
layers/supsim/python/supsim/: config.py
layers/supsim/python/supsim/models/: __init__.py  tenant_context.py
layers/supsim/python/supsim/query_service/: __init__.py  query_service.py
layers/supsim/python/supsim/query_service/templates/: customer_summary.sql  movement_metrics.sql  stock_summary.sql
layers/supsim/python/supsim/services/: analytics.py
layers/supsim/python/supsim/utils/: errors.py  logging.py  response.py
src/supsim/: config.py  main.py
src/supsim/api/v1/: router.py
src/supsim/api/v1/endpoints/: health.py
src/supsim/db/duckdb/: connection.py
stacks/: api_stack.py  iam_stack.py  lambda_stack.py
supsim_backend/: supsim_backend_stack.py
tests/unit/: test_supsim_backend_stack.py
