[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supsim"
version = "0.1.0"
description = "SupSim — multi-tenant supply chain analytics and simulation backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "duckdb>=1.2",
    "boto3>=1.35",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.8",
    "isort>=5.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.isort]
profile = "black"
known_first_party = ["supsim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
