[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supsim"
version = "0.1.0"
description = "SupSim — multi-tenant supply chain analytics and simulation backend"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "mypy>=1.13",
    "moto[dynamodb,cognitoidp]>=5.0",
    "pynamodb>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "boto3>=1.35",
    "boto3-stubs[dynamodb,cognito-idp,athena]>=1.35",
    "awswrangler>=3.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "layers/supsim/python"
